# vecinita-model

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
src/vecinita/: __init__.py  app.py  asgi.py  config.py  images.py  lifecycle.py  volumes.py
src/vecinita/api/: routes.py  schemas.py
src/vecinita/models/: base.py  ollama.py
tests/: conftest.py  test_app_runtime.py  test_container_setup.py  test_models_runtime.py  test_routes.py  test_schemas.py
